# WW-DreamDB

./: CMakeLists.txt
include/cache/: cache_base.h  lru_cache.h
include/common/: json.h  prefix.h
include/common/meta/: collection_meta.h  meta.h  segment_meta.h
include/common/types/: index_type.h  metric_type.h  search_result.h
include/db/: collection.h  dream_db.h  segment.h
include/index/: brute_force_index.h  index_base.h  index_factory.h
include/utils/math/: distance.h  random.h
include/utils/uuid/: uuid.h
src/cache/: lru_cache.inl
src/common/meta/: collection_meta.cpp  meta.inl  segment_meta.cpp
src/common/types/: index_type.cpp  metric_type.cpp
src/db/: collection.cpp  dream_db.cpp  segment.cpp
src/index/: brute_force_index.inl  index_base.cpp  index_factory.cpp
src/utils/math/: distance.cpp  distance.inl  random.inl
src/utils/uuid/: uuid.cpp
tests/: CMakeLists.txt
tests/db/: db_test.cpp
